Libre 2: Fix alignwide children, and group container.

--- a/libre-2/css/blocks.css
+++ b/libre-2/css/blocks.css
@@ -36,6 +36,13 @@ Description: Used to style Gutenberg Blocks.
 		width: auto;
 	}
 
+	/* Child blocks should not get wider than their parent */
+	.singular.no-sidebar  [class^="wp-block-"] .alignwide {
+		margin-right: inherit;
+		margin-left: inherit;
+		max-width: 100%;
+	}
+
 	.singular.no-sidebar .wp-block-embed.is-type-video.alignwide iframe {
 		width: 100% !important;
 		height: 100% !important;
@@ -359,7 +366,12 @@ p.has-drop-cap:not(:focus)::first-letter {
 	box-shadow: none;
 }
 
-/* Columns */
+/* Group */
+
+.wp-block-group.alignfull .wp-block-group__inner-container {
+	max-width: 740px;
+	margin: 0 auto;
+}
 
 /* Separator */
 
